# tickerdb-python

./: .gitignore  CHANGELOG.md  README.md  REFACTOR_PLAN.md  pyproject.toml
examples/: smoke_test.py
src/tickerdb/: __init__.py  _endpoints.py  _transport.py  _version.py  async_client.py  client.py  exceptions.py  query.py
src/tickerdb/types/: __init__.py  account.py  common.py  ohlcv.py  screeners.py  search.py  summary.py  teams.py  webhooks.py
tests/: conftest.py  test_client.py  test_endpoints.py  test_query.py  test_transport.py
tickerapi/: __init__.py  async_client.py  client.py  exceptions.py  types.py
tickerdb/: __init__.py  async_client.py  client.py  exceptions.py  types.py
