[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickerapi"
version = "1.4.0"
description = "Python SDK for the TickerAPI financial data API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TickerAPI", email = "support@tickerapi.ai" },
]
keywords = ["finance", "stocks", "crypto", "etf", "market-data", "api", "ticker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://tickerapi.ai"
Documentation = "https://tickerapi.ai/docs"
Repository = "https://github.com/tickerapi/tickerapi-python"
Issues = "https://github.com/tickerapi/tickerapi-python/issues"
