[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tickerdb"
version = "0.1.12"
description = "Pre-computed market data that improves agent reasoning, reduces token usage, and replaces data pipelines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TickerDB", email = "support@tickerdb.com" },
]
keywords = ["finance", "stocks", "crypto", "etf", "market-data", "api", "ticker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://tickerdb.com"
Documentation = "https://tickerdb.com/docs"
Repository = "https://github.com/tickerdb/tickerdb-python"
Issues = "https://github.com/tickerdb/tickerdb-python/issues"
