[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/tickerdb/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tickerdb"]

[project]
name = "tickerdb"
dynamic = ["version"]
description = "Connect your agent to pre-computed market context that improves reasoning and reduces token usage."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "TickerDB", email = "support@tickerdb.com" },
]
keywords = ["finance", "stocks", "crypto", "etf", "market-data", "api", "ticker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://tickerdb.com"
Documentation = "https://tickerdb.com/docs"
Repository = "https://github.com/tickerdb/tickerdb-python"
Changelog = "https://github.com/tickerdb/tickerdb-python/blob/main/CHANGELOG.md"
Issues = "https://github.com/tickerdb/tickerdb-python/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
